tests/fixtures/invalid/set_le_int.py
# Cannot compare set with Int using <=
x: bool = {1, 2} <= 3
